[metadata]
name = data-rlsim
version = attr: data_rlsim.__version__
author = attr: data_rlsim.__author__
author_email = azhar.ah@raqmzhientist.com, niezam.siberspot.1004@gmail.com
url = https://wix.raqmzhientist.com
description = Simulated domain-based data generator for wide use cases
long_description = file: README.md
long_description_content_type = text/markdown
dynamic =
    version
keywords = data, example, generator, simulation, use-case
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
zip_safe = True
include_package_data = False
install_requires =
    pandas
    sklearn

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    data-rlsim = data_rlsim.simulation:main

# [options.extras_require]
# notebook =
#     jupyter>=1.0.0
#     matplotlib
# dev = 
#     black>=22.1.0
#     flake8>=4.0.1
#     pytest

[options.package_data]
# data-rlsim = data/**/*.json
* = README.md
